--- a/k8s/14.md
+++ b/k8s/14.md
@@ -110,10 +110,18 @@ configmap/prometheus-kps-kube-prometheus-stack-prometheus-rulefiles-0   35     1
 a. Check CPU and Memory consumption of your StatefulSet.
 ![CPU](./screenshots/lab14-a.png)
 ![memory](./screenshots/lab14-a-memory.png)
+
 b. Identify Pods with higher and lower CPU usage in the default namespace.
 ![Pods](./screenshots/lab14-b.png)
+
 c. Monitor node memory usage in percentage and megabytes.
 ![node memory](./screenshots/lab14-c.png)
+
 d. Count the number of pods and containers managed by the Kubelet service.
+![number of pods](./screenshots/lab14-d.png)
+
 e. Evaluate network usage of Pods in the default namespace.
+![network usage](./screenshots/lab14-e.png)
+
 f. Determine the number of active alerts; also check the Web UI with minikube service monitoring-kube-prometheus-alertmanager.
+![alerts](./screenshots/lab14-f.png)
